add function to split inputted numbers to string.

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,10 @@ img {
   padding: 3px;
   object-fit: contain;
 }
+
+h1 {
+  text-align: center;
+  margin: 5px;
+  border: 2px;
+  padding: 5px;
+}
